[package]
name = "alps-writer"
version = "0.1.0"
authors = ["Stephen Mizell <smizell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
comrak = "0.9.0"
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.8"
