[package]
name = "alps-writer"
version = "0.1.5"
authors = ["Stephen Mizell <smizell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.8"
serde_json = "1.0"
